Utsav | Started working on the hero section

--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,12 @@ body {
     font-weight: 400;
     color: #555;
 }
+
+.hero {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.hero-img {
+    width: 100%;
+}
