--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,31 @@ body {
 }
 
 /*****************************/
-/* GENERAL COMPONENTS */
+/* GENERAL REUSABLE COMPONENTS */
 /*****************************/
+
+.container {
+    max-width:120rem;
+    padding: 0 3.2rem;
+    margin: 0 auto;
+}
+
+.grid {
+    display: grid;
+    gap: 9.6rem;
+}
+
+.grid--2-cols {
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3-cols {
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.grid--4-cols {
+    grid-template-columns: repeat(4, 1fr);
+}
 
 .heading-primary {
     font-size: 5.2rem;
@@ -152,13 +175,9 @@ body {
     margin-bottom: 4.8rem;
 }
 
-
-
 .hero-img {
     width: 100%;
 }
-
-
 
 .delivered-meals {
     display: flex;
@@ -192,4 +211,15 @@ body {
     color: #cf711f;
     font-weight: 700;
 }
+
+/*****************************/
+/* HOW IT WORKS SECTION*/
+/*****************************/
+
+.section-how {
+    padding: 9.6rem  0;
+    background-color: orangered;
+}
+
+
 
