--- a/css/general.css
+++ b/css/general.css
@@ -43,6 +43,10 @@ body {
     grid-template-columns: repeat(4, 1fr);
 }
 
+.grid--center-v {
+    align-items: center;
+}
+
 .heading-primary,
 .heading-secondary
 .heading-tertiary {
