--- a/css/general.css
+++ b/css/general.css
@@ -94,7 +94,7 @@ body {
     padding: 1.6rem  3.2rem; 
     border-radius: 9px;
 
-    transition: background-color 0.3s;
+    transition: all 0.3s;
 }
 
 .btn--full:link,
